--- a/namleo.html
+++ b/namleo.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nam Lẹ<object data="" type=""></object></title>
+    <title>Nam Lẹo<object data="" Nam Lẹo""></object></title>
 
 </head>
 <body>
     <h1 style="color: red;">Rốt đao</h1>
-
+    <h2> Meet Mr. Bob</h2>
+    <img src="http;//bob.codegym.vn/assets/image/Codegyn-bob-RIGHTxWH200.png"
+    alt="Mr. bob" style="height: 100px;"
+    
 </body>
 </html>
