--- a/Luyentap.html
+++ b/Luyentap.html
@@ -74,3 +74,28 @@
 
 
 </html>  
+<script>
+    switch (new Date().getDay()) {
+        case 0:
+            day = "Chu Nhat";
+            
+            break;
+        case 1: 
+            day = "Thu Hai";
+            break;
+        case 2: 
+            day = "Thu Ba";
+            break;
+        case 3:
+            day = "Thu Tu";
+            break;
+        case 4:
+            day = "Thu Nam";
+            break;
+        case 5: 
+            day = "Thu Sau";
+            break;
+        case 6: 
+            day = "Thu Bay";
+            break;
+  </script>
