--- a/good-fast-cheap/good-fast-cheap.html
+++ b/good-fast-cheap/good-fast-cheap.html
@@ -6,58 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>good-fast-cheap</title>
-    <style media="screen">
-        .switch {
-            position: relative;
-            display: inline-block;
-            width: 60px;
-            height: 34px;
-        
-        }
-        .switch input {
-            display: none;
-        }
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: rgb(217, 255, 0);
-            -webkit-transition: .4s;
-            transition: .4s;
-        }
-        .slider::before {
-            position: absolute;
-            content: "";
-            height: 26px;
-            width: 26px;
-            left: 4px;
-            right: 4px;
-            background-color: rgb(21, 218, 47);
-            -webkit-transition: .4s;
-            transition: .4s;
-        }
-        input:checked+.slider {
-            background-color: #ff0000;
-        }
-        input:focus+.slider {
-            box-shadow: 0 0 1px #ff0000;
-        }
-        input:checked+.slider::before {
-            -webkit-transform:  translateX(26px);
-            -ms-transform: translateX(26px);
-            transform: translateX(26px) ;
-        }
-        .slider.round {
-            border-radius: 34px;
-        }
-        .slider.round::before {
-            border-radius: 50%;
-        }
-        
-        </style>
+    <link rel="stylesheet" href="good.css">i
 </head>
 
 <body > 
