--- a/WEEK  3/VongLap/Luyentapvonglap01/bai08.html
+++ b/WEEK  3/VongLap/Luyentapvonglap01/bai08.html
@@ -7,7 +7,7 @@
     <title>bai 8</title>
 </head>
 <body>
-    <p><b>Bài 8 :</b>Game đoán số.</p>
+    <p>Game đoán số.</p>
     <p>1. Thiết kế giao diện: Giao diện chỉ gồm 1 Button "Chơi": cho phép người dùng bắt đầu chơi hoặc chơi lại </p>
     <p>2. Mô tả ứng dụng: Khi người dùng nhấn vào button “Chơi”:</p>   
     <ul>
