--- a/WEEK  3/Mang/taothaotacvoimang/thaotacmang.html
+++ b/WEEK  3/Mang/taothaotacvoimang/thaotacmang.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <h1>Sample Screen:</h1>
     <input type="text" id="txtValue">
     <input type="button" id="btnAdd" value="Add" onclick="add_element_to_array();">
     <input type="button" id="btnDisplay" value="Display" onclick="display_array()">
@@ -24,7 +25,7 @@
 
         function add_element_to_array() {
             array[x] = document.getElementById("txtValue").value;
-            alert("Element:" + array[x] + "Added at index" + x)
+            ("Element:" + array[x] + "Added at index" + x)
             x++
             document.getElementById("txtValue").value = ""
         }
