--- a/timkiem.html
+++ b/timkiem.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
-
 <body>
-    <script src="index.js">
-        // let number = +prompt("Enter number :")
-        // while (number != 0) {
-
-        //     document.write(number)
-        //     number = +prompt('enter number :')
-        // }
-        
-    </script>
+    <form action="">
+        <input type="text">
+        <input type="submit" value="Tìm Kiếm">
+    </form>
 </body>
-
 </html>
